--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}{{ section.title | default(value=config.title) }}{% endblock title %}
 
 {% block body %}
-<main class="home">
+<main class="hero">
     {{ section.content | safe }}
 </main>
 {% endblock body %}
